--- a/BlazorApp/Pages/Documents.razor
+++ b/BlazorApp/Pages/Documents.razor
@@ -4,7 +4,12 @@
 @inject NavigationManager NavigationManager
 @inject DialogService DialogService
 
-
+@if (isLoading)
+{
+    <ProgressBarSpinner />
+}
+else
+{
     <RadzenCard Style="width: fit-content; width:100%" Class="mt-3 mb-3 mx-auto">
         <RadzenMenu>
             <RadzenMenuItem Click="CreateButtonClick" Text="Create" Icon="note_add" />
@@ -37,13 +42,12 @@
             <RadzenDataGridColumn Width="160px" TItem="Document" Property="Id" Title="">
                 <Template Context="data">
                     <button type="button" class="btn btn-primary btn-sm" @onclick="(() => EditButtonClick(data.Id))">Edit</button>
-                    <button type="button" class="btn btn-danger btn-sm">Delete</button>
+                    <button type="button" class="btn btn-danger btn-sm" @onclick="(() => DeleteButtonClick(data.Id, data.Index!))">Delete</button>
                 </Template>
             </RadzenDataGridColumn>
         </Columns>
     </RadzenDataGrid>
-
-
+}    
     
 @code {
     List<Document>? documents = new ();
@@ -53,8 +57,16 @@
     { 
         isLoading = true;
         documents = await DocumemntService.GetDocuments();
-        await Task.Delay(2000);
         isLoading = false;
+    }
+
+    protected async Task DeleteDocument(int id, DialogService ds)
+    {
+        ds.Close(false);
+        isLoading = true;
+        await DocumemntService.DeleteDocument(id);
+        isLoading = false;
+        await OnInitializedAsync();
     }
 
     protected void CreateButtonClick(MenuItemEventArgs args)
@@ -65,5 +77,19 @@
     protected void EditButtonClick(int id)
     {
         NavigationManager.NavigateTo($"edit-document/{id}");
+    }
+
+    protected async Task DeleteButtonClick(int id, string index)
+    {
+     var result = await DialogService.OpenAsync("Confirm Dialog", ds =>
+        @<div>
+            <div class="modal-body">
+                Are you sure you want delete @(index) item?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" @onclick="(() => ds.Close(false))">Cancel</button>
+                <button type="button" class="btn btn-danger" @onclick="(() => DeleteDocument(id, ds))">Delete</button>
+            </div>
+        </div>);
     }
 }
