--- a/BlazorApp/Pages/EditDocument.razor
+++ b/BlazorApp/Pages/EditDocument.razor
@@ -5,65 +5,73 @@
 @inject NavigationManager NavigationManager
 
 
-@if (Id == null)
+@if (isLoading)
 {
-    <h2>Create Document</h2>
+    <ProgressBarSpinner />
 }
-else
+else 
 {
-    <h2>Update Document</h2>
+    @if (Id == null)
+    {
+        <h2>Create Document</h2>
+    }
+    else
+    {
+        <h2>Update Document</h2>
+    }
+
+    <EditForm Model="doucment" OnSubmit="HandleSubmit" IsLoading="true">
+        <div>
+            <label for="index">Index</label>
+            <InputText id="index" @bind-Value="doucment!.Index" class="form-control"></InputText>
+        </div>
+        <div>
+            <label for="title">Title</label>
+            <InputText id="title" @bind-Value="doucment.Title" class="form-control"></InputText>
+        </div>
+        <div>
+            <label for="subject">Subject</label>
+            <InputTextArea id="subject" @bind-Value="doucment.Subject" class="form-control" rows="6"></InputTextArea>
+        </div>
+        <div>
+            <label for="company">Company</label>
+            <InputText id="company" @bind-Value="doucment.Company" class="form-control"></InputText>
+        </div>
+        <div>
+            <label for="date">Date</label>
+            <InputDate id="date" @bind-Value="doucment.Date" class="form-control"></InputDate>
+        </div>
+        <div>
+            <label for="amount">Amount</label>
+            <InputNumber id="amount" @bind-Value="doucment.Amount" class="form-control"></InputNumber>
+        </div>
+        <div>
+            <label for="currency">Currency</label>
+            <InputSelect id="currency" @bind-Value="doucment.Currency" class="form-control">
+                <option value="EUR">EUR</option>
+                <option value="USD">USD</option>
+                <option value="PLN">PLN</option>
+                <option value="GBP">GBP</option>
+            </InputSelect>
+        </div>   
+        <div>
+            <label for="author">Author</label>
+            <InputText id="author" @bind-Value="doucment.Author" class="form-control"></InputText>
+        </div>
+
+        <div class="mt-3 mb-3 float-left">
+            <button type="submit" class="btn btn-primary">@buttonText</button>
+            <button type="button" class="btn btn-danger" @onclick="CancelButtonClick">Cancel</button>
+        </div>
+    </EditForm>
+
 }
-
-<EditForm Model="doucment" OnSubmit="HandleSubmit" IsLoading="true">
-    <div>
-        <label for="index">Index</label>
-        <InputText id="index" @bind-Value="doucment!.Index" class="form-control"></InputText>
-    </div>
-    <div>
-        <label for="title">Title</label>
-        <InputText id="title" @bind-Value="doucment.Title" class="form-control"></InputText>
-    </div>
-    <div>
-        <label for="subject">Subject</label>
-        <InputTextArea id="subject" @bind-Value="doucment.Subject" class="form-control" rows="6"></InputTextArea>
-    </div>
-    <div>
-        <label for="company">Company</label>
-        <InputText id="company" @bind-Value="doucment.Company" class="form-control"></InputText>
-    </div>
-    <div>
-        <label for="date">Date</label>
-        <InputDate id="date" @bind-Value="doucment.Date" class="form-control"></InputDate>
-    </div>
-    <div>
-        <label for="amount">Amount</label>
-        <InputNumber id="amount" @bind-Value="doucment.Amount" class="form-control"></InputNumber>
-    </div>
-    <div>
-        <label for="currency">Currency</label>
-        <InputSelect id="currency" @bind-Value="doucment.Currency" class="form-control">
-            <option value="EUR">EUR</option>
-            <option value="USD">USD</option>
-            <option value="PLN">PLN</option>
-            <option value="GBP">GBP</option>
-        </InputSelect>
-    </div>   
-    <div>
-        <label for="author">Author</label>
-        <InputText id="author" @bind-Value="doucment.Author" class="form-control"></InputText>
-    </div>
-
-    <div class="mt-3 mb-3 float-left">
-        <button type="submit" class="btn btn-primary">@buttonText</button>
-        <button type="button" class="btn btn-danger" @onclick="CancelButtonClick">Cancel</button>
-    </div>
-</EditForm>
-
 
 
 @code {
     string buttonText = string.Empty;
-    Document? doucment = new Document(); 
+    Document? doucment = new Document();
+    bool isLoading = false;
 
     protected override void OnInitialized()
     {
@@ -72,10 +80,14 @@ else
 
     protected override async Task OnParametersSetAsync()
     {
+        isLoading = true;
+
         if (Id != null)
         {
             doucment = await DocumemntService.GetDocument(Id);
         }
+
+        isLoading = false;
     }
 
     protected async Task HandleSubmit()
