--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -2,8 +2,8 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, please sign in</h1>
 
-Welcome to your new app.
+Welcome in new Blazor application to manage documents
 
 <SurveyPrompt Title="How is Blazor working for you?" />
