--- a/BlazorApp/Shared/MainLayout.razor
+++ b/BlazorApp/Shared/MainLayout.razor
@@ -4,14 +4,10 @@
 
 <TopNavMenu />
 
-<div class="page">
-    @* <div class="sidebar">
-        <NavMenu />
-    </div> *@
-    
+<div class="page">    
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <AccessControl />
         </div>
 
         <article class="content px-4">
