minimal-api-and-blazor #19

--- a/BlazorApp/Pages/Documents.razor
+++ b/BlazorApp/Pages/Documents.razor
@@ -1,4 +1,5 @@
 ﻿@page "/documents"
+@attribute [Authorize]
 
 @inject IDocumentService DocumemntService
 @inject NavigationManager NavigationManager
