--- a/BlazorApp/Shared/AccessControl.razor
+++ b/BlazorApp/Shared/AccessControl.razor
@@ -6,14 +6,14 @@
 
 <AuthorizeView>
     <Authorized>
-        Hello, @context?.User?.Identity?.Name!!
+        Hello, @context?.User?.Identity?.Name
         <a href="#" @onclick="BeginSignOut" class="btn btn-danger text-decoration-none" role="button" >
             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 8 8"><path fill="currentColor" d="M3 0v1h4v5H3v1h5V0H3zM2 2L0 3.5L2 5V4h4V3H2V2z"/></svg>
             Sign out
         </a>
     </Authorized>
     <NotAuthorized>
-        Hello, guest!
+        Hello, guest
         <a href="authentication/login" class="btn btn-primary text-decoration-none" role="button" >
             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 8 8"><path fill="currentColor" d="M3 0v1h4v5H3v1h5V0H3zm1 2v1H0v1h4v1l2-1.5L4 2z"/></svg> 
             Sign in
