--- a/BlazorApp/Shared/TopNavMenu.razor
+++ b/BlazorApp/Shared/TopNavMenu.razor
@@ -13,19 +13,16 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
           </NavLink>
         </li>
-        <li class="nav-item mr-1 ml-1">
-            <NavLink class="nav-link" href="documents">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Documents
-            </NavLink>
-        </li>
-      </ul>
-      @* <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+        <AuthorizeView>
+          <Authorized>
             <li class="nav-item mr-1 ml-1">
-                <NavLink class="nav-link" href="authentication/login" Match="NavLinkMatch.All">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 8 8"><path fill="currentColor" d="M3 0v1h4v5H3v1h5V0H3zm1 2v1H0v1h4v1l2-1.5L4 2z"/></svg> Sign in
+                <NavLink class="nav-link" href="documents">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Documents
                 </NavLink>
             </li>
-      </ul> *@
+          </Authorized>
+        </AuthorizeView>
+      </ul>
     </div>
   </div>
 </nav>
