minimal-api-and-blazor #25

--- a/BlazorApp/Shared/ModalDialog.razor
+++ b/BlazorApp/Shared/ModalDialog.razor
@@ -1,8 +1,4 @@
-﻿
-@* <button class="btn btn-primary" @onclick="@ModalShow">Show Dialog!</button>
-@if (showModal)
-{ *@
-    <div class="modal fade show" id="myModal" style="display:block; background-color: rgba(10,10,10,.8);" aria-modal="true" aria-labelledby="exampleModalLabel" role="dialog">
+﻿<div class="modal fade show" id="myModal" style="display:block; background-color: rgba(10,10,10,.8);" aria-modal="true" aria-labelledby="exampleModalLabel" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
 
@@ -22,8 +18,7 @@
             </div>
         </div>
     </div>
-    </div>
-@* } *@
+</div>
 <hr />
 
 @code
