--- a/BlazorApp/_Imports.razor
+++ b/BlazorApp/_Imports.razor
@@ -8,9 +8,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using BlazorApp
-@using BlazorApp.Shared
+@using DocumentsBlazor
+@using DocumentsBlazor.Shared
 @using Radzen
 @using Radzen.Blazor
-@using BlazorApp.Models
-@using BlazorApp.Services
+@using DocumentsBlazor.Models
+@using DocumentsBlazor.Services
