--- a/AppDocuments.Blazor/_Imports.razor
+++ b/AppDocuments.Blazor/_Imports.razor
@@ -8,9 +8,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using DocumentsBlazor
-@using DocumentsBlazor.Shared
+@using AppDocuments.Blazor
+@using AppDocuments.Blazor.Shared
 @using Radzen
 @using Radzen.Blazor
-@using DocumentsBlazor.Models
-@using DocumentsBlazor.Services
+@using AppDocuments.Blazor.Models
+@using AppDocuments.Blazor.Services
